2000-10-19  Jeff Hobbs  <jeff.hobbs@acm.org>

	* tests/all.tcl: new file
	* tests/tkTable.test: copied listbox.test in to serve as a base
	for tests on the table widget.  Conversion still needs to be done.

	* generic/tkTableCmds.c: #if 0'd stub function Table_Cmd

	* generic/tkTable.h:
	* generic/tkTable.c: corrected headers, made TableConfigure static

2000-08-30  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.h:
	* generic/tkTableWin.c (EmbWinConfigure):
	* generic/tkTableTag.c (Table_TagCmd):
	* generic/tkTable.c (TableConfigure): changed -borderwidth to use
	TK_CONFIG_CUSTOM functions for option parsing.

	* win/makefile.vc:
	* unix/Makefile.in: updated for added/removed source files

	* generic/cmd.c (removed):
	* generic/mm.h (removed):
	* generic/tkTableUtil.c (new): moved the few used Cmd_* functions
	into tkTableUtil.c (Cmd_Struct moved to tkTable.h), removing the
	need for the other accessory files.

	* unix/configure:
	* unix/configure.in (uname check): added support for systems where
	uname has no -p option (ie HP).

2000-08-21  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c (TableConfigure): added check for NULL
	oldBorders during configure.

2000-08-18  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c: changed the -ipad* defaults to 0, to go along
	with the -pad* defaults.  For users looking for backwards
	compatability with 2.5 padding, add:
	    option add *Table.ipadX 2
	    option add *Table.ipadY 1
	Users will likely find that -pad* is more intuitive though.
		**** POTENTIAL INCOMPATABILITY ****

	* doc/tkTable.html:
	* doc/tkTable.n: updated docs to reflect new -(i)pad* definitions
	and enhanced -bd behavior.

	* generic/tkTable.c (TableCursorEvent, TableConfigCursor): reduced
	unnecessary redraws when the cursor was in a non-editable cell.

2000-08-17  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c: enhanced -borderwidth option to support
	per-edge configuration of borderwith.  -bd now takes a list of